@@ -191,6 +191,32 @@ object MiniLivyMain extends MiniClusterBase {
 
 private case class ProcessInfo(process: Process, logFile: File)
 
+private object MiniCluster {
+  // JVM flags required to run the Hadoop / Guice / CGLib stack on Java 17+. Without these
+  // the YARN ResourceManager fails to boot with
+  //   InaccessibleObjectException: Unable to make ... ClassLoader.defineClass accessible:
+  //   module java.base does not "opens java.lang" to unnamed module
+  // when Guice / CGLib try to define a proxy class via reflection. The Maven build sets
+  // -DextraJavaTestArgs=... to the same list via the parent pom, but tests launched from
+  // an IDE do not go through that plugin config, so this default is what makes the mini
+  // cluster boot from IntelliJ without extra VM options.
+  val defaultJava17TestArgs: Seq[String] = Seq(
+    "-XX:+IgnoreUnrecognizedVMOptions",
+    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/java.net=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+    "--add-exports=java.base/sun.net.dns=ALL-UNNAMED",
+    "--add-exports=java.base/sun.net.util=ALL-UNNAMED",
+    "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
+    "--add-exports=java.base/sun.security.util=ALL-UNNAMED"
+  )
+}
+
 /**
  * Cluster implementation that uses HDFS / YARN mini clusters running as sub-processes locally.
  * Launching Livy through this mini cluster results in three child processes:
@@ -242,7 +268,8 @@ class MiniCluster(config: Map[String, String]) extends Cluster with MiniClusterU
 
   private def extraJavaTestArgs: Seq[String] = {
     Option(System.getProperty("extraJavaTestArgs"))
-      .map(_.split("\\s+").toSeq).getOrElse(Nil)
+      .map(_.split("\\s+").toSeq.filter(_.nonEmpty))
+      .getOrElse(MiniCluster.defaultJava17TestArgs)
   }
 
   override def deploy(): Unit = {
